# simple-http-server

./: .gitignore  .travis.yml  ANALYSIS.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.cargo/: config  config.toml
.ci/: build-linux-static.sh
.github/workflows/: build.yml  docker-dev.yml  docker.yml
docker/: Dockerfile  Dockerfile.aarch64  Dockerfile.x86_64  README.md
src/: color.rs  compress.rs  config.rs  handlers.rs  main.rs  server.rs  util.rs
src/middlewares/: auth.rs  compress.rs  logger.rs  mod.rs
tests/: hello.txt
