[package]
name = "simple-http-server"
version = "0.8.0"
authors = ["thewawar <thewawar@gmail.com>"]
license = "MIT"
description = "Simple HTTP server"
readme = "README.md"
keywords = ["simple", "http", "server", "static", "file"]
repository = "https://github.com/TheWaWaR/simple-http-server"
edition = "2024"

[features]
default = []
tls = ["dep:openssl", "dep:tokio-openssl"]

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio", "multipart", "query"] }
base64 = "0.22.1"
clap = { version = "4.6.0", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "color"] }
flate2 = "1.1.9"
http-body = "1.0.1"
httpdate = "1.0.3"
mime_guess = "2.0.5"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "sync"] }
tokio-openssl = { version = "0.6.5", optional = true }

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.76", optional = true }

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.76", optional = true, features = ["vendored"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
